<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MyHealthActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:background="@color/lightBlue">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_arrow_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="صحتي"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/deviceName"
            android:layout_below="@id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dataArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/deviceName"
            android:orientation="vertical">

            <TextView
                android:id="@+id/accel_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/accel" />

            <LinearLayout
                android:id="@+id/accel_area"
                android:layout_below="@id/accel_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:id="@+id/accel_x"
                    android:text="@string/emptyText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_y" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:id="@+id/accel_y"
                    android:text="@string/emptyText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_z" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:id="@+id/accel_z"
                    android:text="@string/emptyText"/>

            </LinearLayout>

            <TextView
                android:id="@+id/bvp_label"
                android:layout_marginTop="10dp"
                android:layout_below="@id/accel_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bvp_label" />

            <TextView
                android:layout_below="@id/bvp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bvp"
                android:text="@string/emptyText"/>

            <TextView
                android:id="@+id/eda_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bvp"
                android:layout_marginTop="10dp"
                android:text="@string/eda_label" />

            <TextView
                android:layout_below="@id/eda_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eda"
                android:text="@string/emptyText"/>

            <TextView
                android:id="@+id/ibi_label"
                android:layout_marginTop="10dp"
                android:layout_below="@id/eda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ibi_label" />

            <TextView
                android:layout_below="@id/ibi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibi"
                android:text="@string/emptyText"/>

            <TextView
                android:id="@+id/temp_label"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ibi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_label" />

            <TextView
                android:layout_below="@id/temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:text="@string/emptyText"/>

            <TextView
                android:id="@+id/battery_label"
                android:layout_marginTop="10dp"
                android:layout_below="@id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_label" />

            <TextView
                android:layout_below="@id/battery_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/battery"
                android:text="@string/emptyText"/>

            <TextView
                android:layout_below="@id/wrist_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wrist_status_label"
                android:text="@string/emptyText"/>

            <Button
                android:id="@+id/disconnectButton"
                android:text="STOP STREAMING"
                android:layout_width="match_parent"
                android:layout_height="44dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

           <!-- <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/lungs"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="معدل التنفس"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/resp_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" لتر"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>-->


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/steps"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="الخطوات"/>

                <TextView
                    android:id="@+id/steps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="-"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/thermometer"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="درجة الحرارة"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=" C"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/temperature_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/my_health_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="معدل ضربات القلب"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hrv_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sleep_img"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/sleep"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="جودة النوم"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <!--      <TextView
                              android:id="@+id/sleep_label"
                              android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:layout_gravity="center"
                              android:text="-"
                              android:textSize="18sp" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:layout_gravity="center"
                              android:text=" س"
                              android:textSize="18sp" />-->


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>