<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".Activities.PatientPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:background="@color/lightBlue">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_arrow_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="صحة المرضى"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutDirection="rtl"
        android:layout_weight="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/doctor_bg_ltr"
            android:alpha=".4"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_account_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#fff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profile_image"
                android:id="@+id/user_data">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#fff"
                    android:alpha=".7"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/patient_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="رقم الملف: "/>

                        <TextView
                            android:id="@+id/record_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text=" العمر: "/>

                        <TextView
                            android:id="@+id/patient_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text=" سنة"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text=" - "/>

                        <TextView
                            android:id="@+id/patient_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="10dp"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/main_main_layout_style">

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_diagnosis_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/diagnosis_icon"/>
                        <TextView
                            style="@style/main_titles_style"
                            android:text="@string/self_diagnosis"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_my_health_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/my_health_icon"/>
                        <TextView
                            style="@style/main_titles_style"
                            android:text="@string/my_health"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout style="@style/main_main_layout_style">

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_prescriptions_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/prescriptions_icon"/>

                        <TextView
                            style="@style/main_titles_style"
                            android:text="@string/drug_prescriptions" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_appointment_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/appointment_icon"/>
                        <TextView
                            style="@style/main_titles_style"
                            android:text="@string/appointments" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout style="@style/main_main_layout_style">

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_reports_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/reports_icon"/>
                        <TextView
                            style="@style/main_titles_style"
                            android:text="@string/reports"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/main_card_style">
                    <LinearLayout
                        android:id="@+id/main_education_layout"
                        style="@style/main_layout_style">
                        <ImageView
                            style="@style/main_img_style"
                            android:src="@drawable/education_icon"/>

                        <TextView
                            style="@style/main_titles_style"
                            android:layout_width="wrap_content"
                            android:text="@string/health_education" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>